--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     padding:0;
     font-size:12px;
     background: #2980b9
-    url('https://static.tumblr.com/03fbbc566b081016810402488936fbae/pqpk3dn/MRSmlzpj3/tumblr_static_bg3.png') repeat 0 0;
+    url('images/bg.png') repeat 0 0;
     background-size: auto 100%;
     -webkit-animation: 10s linear 0s normal none infinite animate;
     -moz-animation: 10s linear 0s normal none infinite animate;
