--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body{
 
     a {
         text-decoration: none;
-        color: pink;
+        color: rgb(255, 255, 255);
         font-weight: 700;
     }
 
